--- a/index.html
+++ b/index.html
@@ -7,27 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="hstyle.css">
     <script src="js/jquery.js"></script>
-    <link rel="stylesheet" href="fonts/font-awesome.css">
+    <script src="https://kit.fontawesome.com/3f04a3eb9b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fonts/google-fonts.css">
     <title>Foody-A new way Cook</title>
 </head>
 
 <body>
-    <header class="nav">
-        <nav>
-            <img src="" alt="">
+    <header>
+        <nav class="nav">
             <h3 class="glow">Foody</h3>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Recipies</a></li>
-                <li><a href="#">Drinks</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <div class="search">
+                <li><a href="#" class="links"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#" class="links"><i class="fa fa-laugh-beam"></i>About Us</a></li>
+                <li><a href="#" class="links"><i class="fa fa-pizza-slice"></i>Recipies</a></li>
+                <li><a href="#" class="links"><i class="fa fa-mug-hot"></i>Drinks</a></li>
+                <li><a href="#" class="links"><i class="fa fa-phone"></i>Contact Us</a></li>
+                <li><div class="search">
                     <input type="text" id="search" placeholder="Seach This Site">
-                    <button><img src="images\search--v2.png" alt=""></button>
-                </div>
+                    <button><i class="fas fa-search"></i></button>
+                </div></li>
             </ul>
         </nav>
     </header>
